--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,6 @@
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-5 mt-5">
-            <movies></movies>
-        </div>
-    </div>
+<h1>Movies App</h1>
+<movies></movies>
+
+<div class="alert alert-success">
+    Success
 </div>
-
-
-
