--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card my-2">
     <div class="card-header">
         {{ title }}
     </div>
@@ -10,5 +10,25 @@
     </ul>
 </div>
 
-
+<div class="card my-2">
+    <div class="card-header">
+        Add Movie
+    </div>
+    <div class="card-body">
+        <div class="form-group">
+            <label for="name">name</label>
+            <input #name class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="imageUrl">imageUrl</label>
+            <input #imageUrl class="form-control">
+        </div>    
+        <div class="form-group">
+            <label for="description">description</label>
+            <textarea #description class="form-control"></textarea>
+        </div>    
+        
+        <button (click)="add(name.value,imageUrl.value,description.value); name.value=''; imageUrl.value=''; description.value='';" class="btn btn-primary btn-sm">Save</button>
+    </div>
+</div>
 
