--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -5,7 +5,7 @@
     <ul class="list-group list-group-flush">
         <li *ngFor="let movie of movies" routerLink="/detail/{{ movie.id }}" class="list-group-item">
             <span class="badge bg-primary">{{movie.id}}</span> {{movie.name}}
-            <span class="close">X</span>
+            <span (click)="delete(movie)" class="close">X</span>
         </li>
     </ul>
 </div>
